[package]
name = "kd-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"              # Random number generators and other randomness functionality. 

[profile.dev]
opt-level = 2               # Use slightly better optimizations.

[profile.test]
opt-level = 2               # Use slightly better optimizations.

